es-client-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: final
  name: elasticsearch-client
  labels:
    app: elasticsearch
    role: client
spec:
  ports:
  - port: 9200
    name: client
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
    role: client
---
