es-data-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: final
  name: elasticsearch-data
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
    role: data
---
