es-master-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: final
  name: elasticsearch-master
  labels:
    app: elasticsearch
    role: master
spec:
  ports:
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
    role: master
---
