kibana-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: final
  name: kibana
  labels:
    app: kibana
spec:
  type: ClusterIP
  ports:
    - port: 5601
      protocol: TCP
      name: webinterface 
      targetPort: 5601
  selector:
    app: kibana
---
