kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: final
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kibana.logging.my.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /
status:
  loadBalancer:
    ingress:
    - {}
